{
  "version": 4,
  "terraform_version": "0.15.3",
  "serial": 285,
  "lineage": "e62ab136-628b-ed60-d0f2-c9ef7decc483",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_alb",
      "name": "elixir_load_balancer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:077320249407:loadbalancer/app/elixirLB/f643e0cac1f846ee",
            "arn_suffix": "app/elixirLB/f643e0cac1f846ee",
            "dns_name": "elixirLB-1031943758.eu-west-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:eu-west-1:077320249407:loadbalancer/app/elixirLB/f643e0cac1f846ee",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "elixirLB",
            "security_groups": [
              "sg-06897cf39ea9712d3"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0273b111fe9f8715d"
              },
              {
                "subnet_id": "subnet-086b51cd2e6cfd36f"
              },
              {
                "subnet_id": "subnet-090f9340c3d9b3756"
              }
            ],
            "subnets": [
              "subnet-0273b111fe9f8715d",
              "subnet-086b51cd2e6cfd36f",
              "subnet-090f9340c3d9b3756"
            ],
            "tags": {
              "Application": "API",
              "Environment": "devops",
              "Owner": "sergio"
            },
            "tags_all": {
              "Application": "API",
              "Environment": "devops",
              "Owner": "sergio"
            },
            "vpc_id": "vpc-0ee6c7882be3eeb8f",
            "zone_id": "Z32O12XQLNTSW2"
          },
          "dependencies": [
            "aws_security_group.load_balancer_security_group",
            "aws_subnet.public",
            "aws_vpc.elixir_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:077320249407:internet-gateway/igw-0c9e83f77176f2205",
            "id": "igw-0c9e83f77176f2205",
            "owner_id": "077320249407",
            "tags": {
              "Application": "API",
              "Environment": "devops",
              "Owner": "sergio"
            },
            "tags_all": {
              "Application": "API",
              "Environment": "devops",
              "Owner": "sergio"
            },
            "vpc_id": "vpc-0ee6c7882be3eeb8f"
          },
          "dependencies": [
            "aws_vpc.elixir_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:077320249407:listener/app/elixirLB/f643e0cac1f846ee/e43e3c2600c36107",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-1:077320249407:targetgroup/elixirTG/8d01554e0326d987",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-1:077320249407:listener/app/elixirLB/f643e0cac1f846ee/e43e3c2600c36107",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-west-1:077320249407:loadbalancer/app/elixirLB/f643e0cac1f846ee",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_alb.elixir_load_balancer",
            "aws_lb_target_group.elixirTG",
            "aws_security_group.load_balancer_security_group",
            "aws_subnet.public",
            "aws_vpc.elixir_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "elixirTG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:077320249407:targetgroup/elixirTG/8d01554e0326d987",
            "arn_suffix": "targetgroup/elixirTG/8d01554e0326d987",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 300,
                "matcher": "200,301,302,404",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 120,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-1:077320249407:targetgroup/elixirTG/8d01554e0326d987",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "elixirTG",
            "port": 4000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Application": "API",
              "Environment": "devops",
              "Owner": "sergio"
            },
            "tags_all": {
              "Application": "API",
              "Environment": "devops",
              "Owner": "sergio"
            },
            "target_type": "ip",
            "vpc_id": "vpc-0ee6c7882be3eeb8f"
          },
          "dependencies": [
            "aws_vpc.elixir_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0c9e83f77176f2205",
            "id": "r-rtb-030c97c720c517ef41080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-030c97c720c517ef4",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.default",
            "aws_vpc.elixir_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "load_balancer_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:077320249407:security-group/sg-06897cf39ea9712d3",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06897cf39ea9712d3",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "LB_security_group",
            "name_prefix": "",
            "owner_id": "077320249407",
            "revoke_rules_on_delete": false,
            "tags": {
              "Application": "API",
              "Environment": "devops",
              "Owner": "sergio"
            },
            "tags_all": {
              "Application": "API",
              "Environment": "devops",
              "Owner": "sergio"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ee6c7882be3eeb8f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.elixir_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "service_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:077320249407:security-group/sg-02866c2c38be70df0",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-02866c2c38be70df0",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 4000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-06897cf39ea9712d3"
                ],
                "self": false,
                "to_port": 4000
              }
            ],
            "name": "service_security_group",
            "name_prefix": "",
            "owner_id": "077320249407",
            "revoke_rules_on_delete": false,
            "tags": {
              "Application": "API",
              "Environment": "devops",
              "Owner": "sergio"
            },
            "tags_all": {
              "Application": "API",
              "Environment": "devops",
              "Owner": "sergio"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ee6c7882be3eeb8f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.load_balancer_security_group",
            "aws_vpc.elixir_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:077320249407:subnet/subnet-01b53af0d17015cbf",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.99.0.0/24",
            "id": "subnet-01b53af0d17015cbf",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "077320249407",
            "tags": {
              "Application": "API",
              "Environment": "devops",
              "Owner": "sergio"
            },
            "tags_all": {
              "Application": "API",
              "Environment": "devops",
              "Owner": "sergio"
            },
            "vpc_id": "vpc-0ee6c7882be3eeb8f"
          },
          "dependencies": [
            "aws_vpc.elixir_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:077320249407:subnet/subnet-09505abdba3f88f1f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.99.1.0/24",
            "id": "subnet-09505abdba3f88f1f",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "077320249407",
            "tags": {
              "Application": "API",
              "Environment": "devops",
              "Owner": "sergio"
            },
            "tags_all": {
              "Application": "API",
              "Environment": "devops",
              "Owner": "sergio"
            },
            "vpc_id": "vpc-0ee6c7882be3eeb8f"
          },
          "dependencies": [
            "aws_vpc.elixir_vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:077320249407:subnet/subnet-0ad8b32538c38f0e9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1c",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.99.2.0/24",
            "id": "subnet-0ad8b32538c38f0e9",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "077320249407",
            "tags": {
              "Application": "API",
              "Environment": "devops",
              "Owner": "sergio"
            },
            "tags_all": {
              "Application": "API",
              "Environment": "devops",
              "Owner": "sergio"
            },
            "vpc_id": "vpc-0ee6c7882be3eeb8f"
          },
          "dependencies": [
            "aws_vpc.elixir_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:077320249407:subnet/subnet-090f9340c3d9b3756",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.99.3.0/24",
            "id": "subnet-090f9340c3d9b3756",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "077320249407",
            "tags": {
              "Application": "API",
              "Environment": "devops",
              "Owner": "sergio"
            },
            "tags_all": {
              "Application": "API",
              "Environment": "devops",
              "Owner": "sergio"
            },
            "vpc_id": "vpc-0ee6c7882be3eeb8f"
          },
          "dependencies": [
            "aws_vpc.elixir_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:077320249407:subnet/subnet-0273b111fe9f8715d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.99.4.0/24",
            "id": "subnet-0273b111fe9f8715d",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "077320249407",
            "tags": {
              "Application": "API",
              "Environment": "devops",
              "Owner": "sergio"
            },
            "tags_all": {
              "Application": "API",
              "Environment": "devops",
              "Owner": "sergio"
            },
            "vpc_id": "vpc-0ee6c7882be3eeb8f"
          },
          "dependencies": [
            "aws_vpc.elixir_vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:077320249407:subnet/subnet-086b51cd2e6cfd36f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1c",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.99.5.0/24",
            "id": "subnet-086b51cd2e6cfd36f",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "077320249407",
            "tags": {
              "Application": "API",
              "Environment": "devops",
              "Owner": "sergio"
            },
            "tags_all": {
              "Application": "API",
              "Environment": "devops",
              "Owner": "sergio"
            },
            "vpc_id": "vpc-0ee6c7882be3eeb8f"
          },
          "dependencies": [
            "aws_vpc.elixir_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "elixir_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:077320249407:vpc/vpc-0ee6c7882be3eeb8f",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.99.0.0/16",
            "default_network_acl_id": "acl-094f6ce9c58b61bd3",
            "default_route_table_id": "rtb-030c97c720c517ef4",
            "default_security_group_id": "sg-00c7170fde72ad0a1",
            "dhcp_options_id": "dopt-0b811d6e1b2b06db9",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0ee6c7882be3eeb8f",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-030c97c720c517ef4",
            "owner_id": "077320249407",
            "tags": {
              "Application": "API",
              "Environment": "devops",
              "Owner": "sergio"
            },
            "tags_all": {
              "Application": "API",
              "Environment": "devops",
              "Owner": "sergio"
            }
          }
        }
      ]
    }
  ]
}